# lite-agentify

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
openspec/changes/polish-admin-ui/: design.md  proposal.md  tasks.md
openspec/specs/admin-auth/: spec.md
openspec/specs/admin-config/: spec.md
openspec/specs/admin-ui/: spec.md
openspec/specs/admin-usage/: spec.md
openspec/specs/admin-visual-design/: spec.md
openspec/specs/api-key-management/: spec.md
openspec/specs/config-hot-reload/: spec.md
openspec/specs/credit-quota/: spec.md
openspec/specs/llm-gateway/: spec.md
openspec/specs/model-catalog/: spec.md
openspec/specs/user-accounts/: spec.md
src/: config.rs  db.rs  main.rs  model.rs  pubsub.rs  reload.rs  state.rs
src/account/: bootstrap.rs  entity.rs  keys.rs  mod.rs  store.rs
src/admin/: account_api.rs  assets.rs  catalog_api.rs  config_api.rs  credits_api.rs  mod.rs  models_api.rs  password.rs  session.rs  tests.rs  usage_api.rs
src/catalog/: entity.rs  import.rs  mod.rs  store.rs
src/domain/: token.rs
src/gateway/: config.rs  headers.rs  mod.rs  model.rs  reload.rs  router.rs  state.rs  tests.rs  upstream.rs  usage.rs
src/pricing/: calc.rs  config.rs  mod.rs  model.rs
src/proxy/: headers.rs  mod.rs  router.rs  tests.rs  upstream.rs
src/quota/: counter.rs  entity.rs  mod.rs  store.rs
src/usage/: entity.rs  mod.rs  observer.rs  parse.rs  query.rs  record.rs  recorder.rs
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  main.tsx
(+126 files in other folders)
