[package]
name = "lite-agentify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
bytes = "1.11.0"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "http2", "ring", "tls12", "webpki-roots"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "http2", "tokio"] }
toml = "0.9.8"
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.19.0", features = ["v4"] }
async-stream = "0.3.6"
async-trait = "0.1.89"
chrono = "0.4.42"
rust_decimal = { version = "1.39.0", features = ["serde"] }
sea-orm = { version = "1.1.17", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-rust_decimal", "with-uuid"] }
